[package]
edition = "2021"
name = "libnare_mk-square"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.13.3", default-features = false, features = ["napi4", "chrono_date"] }
napi-derive = "2.13.0"
rand = "0.8.5"
chrono = "0.4.31"
url = "2.4.1"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
