[package]
edition = "2021"
name = "libnare_mk-square"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.14.1", default-features = false, features = ["napi4", "chrono_date", "async"] }
napi-derive = "2.14.2"
rand = "0.8.5"
chrono = "0.4.31"
url = "2.5.0"
lazy_static = "1.4.0"
regex = "1.10.2"
image = { version = "0.24.7", default-features = false, features = ["png", "jpeg", "webp", "gif"] }
nsfw = { version = "0.1.1", default-features = false, features = ["png", "jpeg", "webp", "gif"] }
rust-embed = { version = "8.0.0", features = ["include-exclude", "compression"] }
nanoid = "0.4.0"

[build-dependencies]
napi-build = "2.1.0"

[profile.release]
lto = true
opt-level = "s"
